--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+*{
+    /* box-sizing: border-box; */
+}
 h1{
     color: #fff;
     font-weight: bold;
@@ -7,7 +10,7 @@ animation: myslide;
 animation-play-state: running;
 /* animation-iteration-count: infinite; */
 animation-timing-function: linear;
-animation-duration: 5s;
+animation-duration: 3s;
 animation-delay: 0s;
 }
     @keyframes myslide{
@@ -21,8 +24,11 @@ animation-delay: 0s;
     text-align: center;
     background: white;
     float: right;
-    margin-left: 40px;
+    margin-left: 35px;
     font-weight: 500;
+    margin-right: 10px;
+    text-decoration: none;
+    /* background-color: #6e32ef; */
 }
 h2{
     color: #fff;
@@ -33,14 +39,19 @@ header{
     width: 100%;
     top: 0;
     left: 0;
-    background: red;
+    padding: 2opx 100px;
+    background: #adc;
     display: flex;
     justify-content: space-between;
     z-index: 99;
+    align-items: center;
+    border: 2px solid #aab;
+    border-radius: 3px;
+    height: 120px;
 }
 p{
     font-size: 25px;
-    background-color: #aab;
+    /* background-color: #fbf; */
 }
 .up a{
     color: black;
@@ -50,15 +61,35 @@ p{
     margin-left: 40px;
     font-size: 20px;
 }
-.img{
-    height: 300px;
-    position: absolute;
-    border: 2px solid blue;
-    border-width: 100%;
-    border: 100%;
-    margin-left: 10px
-
+.up ::after{
+    transition-property: opacity;
 }
+.img{
+    /* background-color: aliceblue; */
+    /* border: 5px solid black; */
+    width: 280px;
+    height: 200px;
+    font-size: 25px;
+    padding: 10px;
+    /* float: right;  */
+    /* border-radius: 5px; */
+    display: flex;
+    /* overflow: hidden; */
+    /* transition-duration: var(ease-in-out); */
+    /* transition-timing-function: ease-in-out; */
+}
+.img a{
+    transition: opacity 0.5s ease-in-out;
+}
+.img:hover::after{
+    opacity: 1;
+    /* animation: 3s linear 0s 1s hisrotate; */
+    transition-duration: 2s;
+    transition-delay: 1s;
+}
+/* @keyframes hisrotate{ */
+    /* 100%{tranform:rotatex(360deg)} */
+/* } */
 .box{
     background-color: aliceblue;
     border: 5px solid black;
@@ -69,11 +100,16 @@ p{
 }
 .division{
     background-color: aliceblue;
-    border: 5px solid black;
-    width: 100%;
+    /* border: 5px solid black; */
+    width: 280px;
     height: 200px;
     font-size: 25px;
-    padding: 10px;    
+    padding: 10px;
+    float: right; 
+    /* border-radius: 5px;   */
+}
+.division a{
+    text-decoration: none;
 }
 h2{
     font-weight: bold;
@@ -81,16 +117,21 @@ h2{
 footer{
     background-color: #f95;
     width: 100%;
-    height: 150px;
+    height: 300px;
     bottom: 0;
 }
 .f{
-    font-size: 20px;
+    /* font-size: 20px; */
     padding: 10px;
-    text-align: center;
+    text-align: justify;
+}
+.f a{
+    text-decoration: none;
 }
 #copy{
     background-color: #f95;
+    font-size: 20px;
+    font-style: italic;
 }
 .deal{
     background-color: yellow;
@@ -107,12 +148,92 @@ footer{
 100%{transform: rotatex(360deg)}
 }
 #search{
-    text-align: center;
+    /* text-align: center; */
     width: 500px;
-    height: 30px;
+    height: 35px;
     margin-left: 40px;
 }
 #submit{
 height: 30px;
 text-align: center;
+cursor: pointer;
 }
+#submit:hover{
+    background-color: #0ff;
+}
+.log{
+    width: 130px;
+    height: 50px;
+    border: 2px solid white;
+    border-radius: 6px;
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    margin-left: 40px;
+}
+.pop{
+    float: left;
+    height: 250px;
+    width: 20%;
+    text-decoration: none;
+    font-size: large;
+    margin-top: 40px;
+    /* text-decoration: none; */
+}
+.pop a{
+    text-decoration: none;
+}
+section{
+   display: flex;
+   flex-wrap: wrap;
+   padding: 0% 10%; 
+   margin-left: 20px;
+   margin-right: 20px;
+   position: relative;
+   text-align: left;
+   justify-content: space-between;
+   list-style-type: none;
+}
+section a{
+    text-decoration: none;
+    list-style-type: none;
+}
+.log:hover{
+    background-color: #0ff;
+}
+#sb{
+    font-size: 25px;
+}
+.start button a{
+    font-size: 20px;
+    width: 105px;
+    height: 40px;
+    text-decoration: none;
+    align-items: center;
+    color: #000;
+    background-color: white;
+}
+.start button a:hover{
+    background-color: #0ff;
+}
+/* body{ */
+    /* display: grid; */
+/* } */
+i{
+    margin-left: 10px;
+    /* font-size: 70px; */
+}
+.socialicon{
+    font-size: 26px;
+    text-align: center;
+    margin-left: 40px;
+}
+.second{
+      display: flex;
+      width: 100%;
+}
+.second2{
+    display: flex;
+    width: 100%;
+}
+
